fixed the scrollbar of login component

--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -118,3 +118,7 @@
   color: #540000;
   text-decoration: underline;
 }
+
+.container_right.login::-webkit-scrollbar{
+  display: none;
+}
